--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IndieDataMind | Anoop Naduvathara</title>
+    <title>IndieDataMind | Data Science & AI Solutions by Anoop Naduvathara</title>
+    <meta name="description" content="Portfolio of Anoop Naduvathara, a Data Scientist specializing in AI, Machine Learning, and Business Intelligence solutions in Kerala.">
+    <meta name="keywords" content="Anoop Naduvathara, IndieDataMind, Data Scientist Kerala, AI Developer, Portfolio, Freelance Data Analyst">
+    <meta name="author" content="Anoop Naduvathara">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
